Fixed text wrapping within data tree
git-svn-id: https://xbox/svnroot/Qorus/trunk@5029 e9028eec-4831-4325-a917-4dc279fcb47c

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1111,7 +1111,7 @@ td.date {
   white-space: nowrap;
 }
 
-td.nowrap {
+th.nowrap, td.nowrap {
   white-space: nowrap;
 }
 
